project pane allows window resizing; add leftPane/rightPane options to the main simulator UI; fix overlapping invisible timestep inspector pane before first use

--- a/src/serve/plugins/simulate/static/inspector.styl
+++ b/src/serve/plugins/simulate/static/inspector.styl
@@ -1,12 +1,14 @@
 #inspector {
 	position: absolute;
-	top: 32px;
+	top: 0px;
 	left: 0px;
 	box-shadow: 0px 0px 5px black;
 	border-right: 1px solid #222;
 	pointer-events: none;
 	bottom: 0px;
 	z-index: 500;
+
+	display: none;
 	opacity: 0;
 
 	font-weight bold
